--- a/HackathonEarthquake.Service/HackathonEarthquake.Service.csproj
+++ b/HackathonEarthquake.Service/HackathonEarthquake.Service.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HackathonEarthquake.Repository\HackathonEarthquake.Repository.csproj" />
+    </ItemGroup>
+
 </Project>
